# Innesce

./: README.md  combinedcompiler.cpp
innesce-starter/: CMakeLists.txt  README.md
innesce-starter-v2/: README.md
innesce-starter-v2/cli/: innescec.cpp
innesce-starter-v2/src/backend/llvm/: codegen.cpp
innesce-starter-v2/src/core/: truth.hpp
innesce-starter-v2/src/frontend/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  sema.cpp
innesce-starter-v3/: CMakeLists.txt  README.md
innesce-starter-v3/cmake/: FindLLVMHelper.cmake
innesce-starter-v3/sample/: hello.inn
innesce-starter-v3/src/backend/llvm/: codegen.cpp
innesce-starter-v3/src/core/: checkpoint.hpp
innesce-starter-v3/src/frontend/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  sema.cpp  sema.hpp
innesce-starter-v3/tests/: test_quarantine.cpp
innesce-starter-v4/sample/: match.inn
innesce-starter-v4/src/backend/llvm/: codegen.cpp  codegen.hpp
innesce-starter-v4/src/frontend/: lexer.hpp  parser.cpp  parser.hpp
innesce-starter-v4/tests/: CMakeLists.txt
innesce-starter-v5/: README.md
innesce-starter-v5/src/backend/llvm/: ir_builder.hpp
innesce-starter-v5/src/core/: durations.hpp  lanes.hpp
innesce-starter-v5/src/frontend/: ast.hpp  lexer.cpp  parser.cpp  sema.cpp  sema.hpp
innesce-starter-v6/: LICENSE  README.md
innesce-starter-v6/sample/: arith.inn  durations_hot_asm.inn
innesce-starter-v6/src/backend/llvm/: codegen.cpp  ir_builder.cpp
innesce-starter-v6/src/core/: quarantine.hpp
innesce-starter-v6/src/frontend/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  sema.cpp  sema.hpp
innesce-starter-v6/tests/: test_common.hpp  test_lanes.cpp  test_truth.cpp
innesce-starter-v7/: CMakeLists.txt  README.md
innesce-starter-v7/sample/: asm_block.inn  duration_casts.inn  perm_stdlib.inn
innesce-starter-v7/src/: main.cpp
innesce-starter-v7/src/frontend/: ast.hpp  lexer.hpp  parser.cpp  sema.cpp
innesce-starter-v7_5/: CMakeLists.txt  README.md
innesce-starter-v7_5/sample/: asm_block.inn  perm_stdlib.inn
innesce-starter-v7_5/src/backend/llvm/: codegen.cpp  codegen.hpp
innesce-starter-v7_5/src/frontend/: ast.hpp  lexer.cpp  parser.cpp  parser.hpp  sema.cpp
innesce-starter-v7_5/src/runtime/: fs.cpp  net.cpp  rand.cpp
innesce-starter/cli/: innescec.cpp
innesce-starter/src/backend/llvm/: ir_builder.cpp  ir_builder.hpp
innesce-starter/src/core/: lanes.cpp
innesce-starter/tests/: test_durations.cpp
innesce-v7_6/: CMakeLists.txt  README.md
innesce-v7_6/sample/: asm_block.inn  asm_destructure.inn  duration_casts.inn  perm_stdlib.inn  stdlib_args.inn
innesce-v7_6/src/: main.cpp
innesce-v7_6/src/backend/llvm/: codegen.cpp
innesce-v7_6/src/frontend/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  sema.cpp  sema.hpp
innesce-v7_6/src/runtime/: net.cpp  net_ext.cpp  rand_ext.cpp
innesce-v8/: README.md
innesce-v8/sample/: asm_destructure.inn  duration_casts.inn  match_tuple.inn
innesce-v8/src/backend/llvm/: codegen.cpp
innesce-v8/src/frontend/: ast.hpp  lexer.cpp  parser.cpp  sema.cpp
innesce-v8/src/runtime/: fs.cpp  fs_ext.cpp  time.cpp
innesce-v8_1/: CMakeLists.txt  README.md
innesce-v8_1/sample/: match_expr_binds_guards.inn  tuple_bind_only.inn
innesce-v8_1/src/: main.cpp
innesce-v8_1/src/backend/llvm/: codegen.cpp
innesce-v8_1/src/frontend/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  sema.cpp  sema.hpp
innesce-v8_1/src/runtime/: fs.cpp  fs_ext.cpp  net.cpp  net_ext.cpp  rand.cpp  rand_ext.cpp  time.cpp
innesce-v9/: CMakeLists.txt  README.md
innesce-v9/sample/: enum_payload_match.inn  tuple_enum_mix.inn
innesce-v9/src/: main.cpp
